# CNAB

./: .gitignore  Makefile  README.md  claude_models.json  ladder_models.json  pyproject.toml  requirements.txt  run_aws.py  run_ladder.py  run_local.py  run_multifamily_ladder.py  run_vendor_ladder.py  vendor_models.json
aws/: .gitignore  README.md  iam-deploy-policy.json  iam-permissions-boundary.json  iam-verify-policy.json  main.tf  outputs.tf  scenario_s3.tf
cnab/: __init__.py  attackgraph.py  backend.py  backend_aws.py  cli.py  coverage.py  defense.py  fidelity.py  iac.py  logio.py  metrics.py  misconfig.py  obfuscate.py  oracle.py  repro.py  runner.py  scenario.py  taxonomy.py
k8s/: README.md  kind-calico.yaml  kind-cilium.yaml  measure_admission_latency.py  measure_networkpolicy_latency.py  vap-deny-privileged.yaml
results/: AWS_PRIMARY_VERIFICATION.md  DEFENSE_HARDEN_C2.json  EXTRACTION_SPLIT.json  HELDOUT_SPLIT_RESULTS.json  K8S_FIDELITY.md  K8S_NETPOL_FIDELITY.md  LOCAL_LLM_LADDER.md  MECHANISM_LATENCY_CALIBRATION.md  MODEL_MANIFEST.json  MULTIFAMILY_LADDER.md  NETPOL_CNI_COMPARISON.md  OBFUSCATION_ABLATION.json  REPRO_DIGEST.txt  REVIEW_RESPONSE.md  SCAFFOLD_COMPARISON.json  SCAFFOLD_COMPARISON.md  VENDOR_LADDER.json  VENDOR_LADDER.md  VENDOR_LADDER_claude.json  aws_fidelity_s3.json  defense_fp.json  eks_latency_calibration.json  k8s_fidelity_s1.json  k8s_netpol_fidelity_s1.json  ladder_3535_interface.json  ladder_3535_minimal.json  ladder_interface.json  ladder_minimal.json  multifamily_pilot.json  multifamily_run.json  netpol_cni_comparison.json
(+34 files in other folders)
